--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "jest": "^29.6.2",
     "sequelize": "^6.32.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3"
   },
   "type": "module"
 }
